# gisasinventory

./: .gitignore  IMPLEMENTATION_TASKS.md  PRODUCT_REQUIREMENTS.md  PROJECT_ARCHITECTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
.envs/: .env.local.example  (+2 more)
backend/: pyproject.toml  requirements.txt
backend/apps/assets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/assets/migrations/: 0001_initial.py  0002_restructure_asset_types.py
backend/apps/notifications/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_notification_deleted_at.py
backend/apps/platform_feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/platform_feedback/migrations/: 0001_initial.py
backend/apps/platform_releases/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/platform_releases/migrations/: 0001_initial.py
backend/apps/settings/: admin.py  apps.py  email_backend.py  models.py  serializers.py  urls.py  views.py
backend/apps/settings/migrations/: 0001_initial.py
backend/apps/tenants/: admin.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  views.py
backend/apps/tenants/migrations/: 0001_initial.py  0002_remove_tenant_name_i18n_tenant_address_and_more.py
backend/apps/user/: adapters.py  models.py
backend/apps/user/migrations/: 0001_initial.py  0002_user_uuid.py  0003_alter_user_uuid.py  (+1 more)
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+139 files in other folders)
